# odoo-mcp

./: .env.example  .gitignore  .mcp.json.example  README.md  TODO.md
.claude-plugin/: marketplace.json  plugin.json
commands/: connect.md  find.md  profiles.md  schema.md  setup.md  use.md
docs/superpowers/plans/: 2026-05-09-phase1-foundation-tools.md
docs/superpowers/specs/: 2026-05-09-phase1-foundation-tools-design.md
hooks/: hooks.json
scripts/: mcp_zombies.py
server/: pyproject.toml
server/odoo_mcp_server/: _helpers.py  _jsonrpc.py  profiles.py  server.py  transport.py
server/odoo_mcp_server/tools/: auth.py  crud.py  discovery.py  inspection.py  workflow.py
server/tests/: conftest.py  test_auth_tool.py  test_helpers.py  test_inspection.py  test_jsonrpc.py  test_profiles.py  test_smoke_phase1.py  test_transport.py  test_workflow.py
