[project]
name = "odoo-mcp"
version = "0.1.0"
description = "Odoo ERP MCP server (XML-RPC)"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "keyring>=24.0",
]

[project.scripts]
odoo-mcp = "odoo_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["odoo_mcp_server"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: hits a live Odoo server (skipped by default in CI)",
]
testpaths = ["tests"]
